--- a/src/app/views/pages/forbidden/forbidden.component.html
+++ b/src/app/views/pages/forbidden/forbidden.component.html
@@ -2,13 +2,13 @@
   <c-container>
     <c-row class="justify-content-center">
       <c-col md="6">
-        <div class="clearfix">
-          <h1 class="float-start display-3 me-4">404</h1>
-          <h4 class="pt-3">Oops! Estás perdido!</h4>
+        <span class="clearfix">
+          <h1 class="float-start display-3 me-4">No autorizado</h1>
+          <h4 class="pt-3">Houston, we have a problem!</h4>
           <p class="text-medium-emphasis float-start">
-            La página que estabasd buscnado no fue encontrada.
+            La página que intentas acceder no está disponible para tu usuario.
           </p>
-        </div>
+        </span>
       </c-col>
     </c-row>
   </c-container>
