--- a/src/app/views/pages/login/login.component.html
+++ b/src/app/views/pages/login/login.component.html
@@ -37,14 +37,9 @@
                       cButton
                       class="px-4"
                       color="success"
-                      (click)="login()"
+                      (click)="login(loginForm.value)"
                     >
                       Ingresar
-                    </button>
-                  </c-col>
-                  <c-col class="text-right" xs="6">
-                    <button cButton class="px-0" color="link">
-                      ¿Has olvidado tu contraseña?
                     </button>
                   </c-col>
                 </c-row>
