Terminando de organizar el proyecto

--- a/src/app/containers/layout/header/header.component.html
+++ b/src/app/containers/layout/header/header.component.html
@@ -51,7 +51,7 @@
 <!--</c-header>-->
 
 <ng-template #userDropdown>
-  <c-dropdown alignment="end" variant="nav-item" *ngIf="isAuthenticated">
+  <c-dropdown alignment="end" variant="nav-item" *ngIf="isUserAuthenticated">
     <button
       cButton
       color=""
