Mejoras en nombres

--- a/src/app/containers/layout/footer/footer.component.html
+++ b/src/app/containers/layout/footer/footer.component.html
@@ -1,7 +1,7 @@
 <!--<c-footer>-->
   <div>
-    <a href="https://coreui.io/pro/angular/" target="_blank">CoreUI</a>
-    <span> &copy; 2023 creativeLabs</span>
+    <a href="https://coreui.io/pro/angular/" target="_blank">Javier, Fernando, Nancy, Selvin</a>
+    <span> &copy; 2023 Ingeniería en informática Q4</span>
   </div>
   <div class="ms-auto">
     Powered by
