--- a/src/app/containers/layout/layout.component.html
+++ b/src/app/containers/layout/layout.component.html
@@ -10,13 +10,13 @@
       src: 'assets/img/brand/coreui-angular.png',
       width: 200,
       height: 46,
-      alt: 'CoreUI Logo'
+      alt: 'Logo'
     }"
     [brandNarrow]="{
       src: 'assets/img/brand/coreui-signet-white.svg',
       width: 46,
       height: 46,
-      alt: 'CoreUI Logo'
+      alt: 'Logo'
     }"
     routerLink="./"
   />
